// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`genFootprint draw-order golden > pins cottage @ seed 1 1`] = `
[
  "10x5",
  "..########",
  "##########",
  "##########",
  "..########",
  "..########",
]
`;

exports[`genFootprint draw-order golden > pins cottage @ seed 42 1`] = `
[
  "9x6",
  "...######",
  "...######",
  "#########",
  "#########",
  "#########",
  "#########",
]
`;

exports[`genFootprint draw-order golden > pins cottage @ seed 12345 1`] = `
[
  "8x8",
  "..###...",
  "..###...",
  "..###...",
  "########",
  "########",
  "########",
  "########",
  "########",
]
`;

exports[`genFootprint draw-order golden > pins manor @ seed 1 1`] = `
[
  "18x10",
  "..################",
  "..################",
  "##################",
  "##################",
  "##################",
  "##################",
  "..################",
  "..################",
  "..################",
  "..################",
]
`;

exports[`genFootprint draw-order golden > pins manor @ seed 42 1`] = `
[
  "17x13",
  "...............##",
  "...##############",
  "...#############.",
  "...#############.",
  "...#############.",
  "...#############.",
  "################.",
  "################.",
  "################.",
  "################.",
  "################.",
  "################.",
  "################.",
]
`;

exports[`genFootprint draw-order golden > pins manor @ seed 12345 1`] = `
[
  "18x15",
  "......#####.......",
  "......#####.......",
  "......#####.......",
  "..################",
  "..################",
  "..################",
  "..################",
  "..################",
  "..################",
  "..################",
  "..################",
  "..################",
  "##################",
  "###...............",
  "###...............",
]
`;

exports[`genFootprint draw-order golden > pins shop @ seed 1 1`] = `
[
  "11x6",
  "..#########",
  "###########",
  "###########",
  "###########",
  "..#########",
  "..#########",
]
`;

exports[`genFootprint draw-order golden > pins shop @ seed 42 1`] = `
[
  "10x7",
  "...#######",
  "...#######",
  "...#######",
  "##########",
  "##########",
  "##########",
  "##########",
]
`;

exports[`genFootprint draw-order golden > pins shop @ seed 12345 1`] = `
[
  "9x9",
  "..###....",
  "..###....",
  "..###....",
  "#########",
  "#########",
  "#########",
  "#########",
  "#########",
  "#########",
]
`;

exports[`genFootprint draw-order golden > pins tavern @ seed 1 1`] = `
[
  "15x8",
  "..#############",
  "..#############",
  "###############",
  "###############",
  "###############",
  "..#############",
  "..#############",
  "..#############",
]
`;

exports[`genFootprint draw-order golden > pins tavern @ seed 42 1`] = `
[
  "15x10",
  "...##########..",
  "...##########..",
  "...##########..",
  "...##########..",
  "#############..",
  "###############",
  "###############",
  "###############",
  "###############",
  "###############",
]
`;

exports[`genFootprint draw-order golden > pins tavern @ seed 12345 1`] = `
[
  "13x14",
  "...#####.....",
  "...#####.....",
  "...#####.....",
  "#############",
  "#############",
  "#############",
  "#############",
  "#############",
  "#############",
  "#############",
  "#############",
  "#########....",
  "#########....",
  "#########....",
]
`;

exports[`genFootprint draw-order golden > pins workshop @ seed 1 1`] = `
[
  "12x6",
  "..##########",
  "############",
  "############",
  "############",
  "..##########",
  "..##########",
]
`;

exports[`genFootprint draw-order golden > pins workshop @ seed 42 1`] = `
[
  "11x8",
  "...########",
  "...########",
  "...########",
  "###########",
  "###########",
  "###########",
  "###########",
  "###########",
]
`;

exports[`genFootprint draw-order golden > pins workshop @ seed 12345 1`] = `
[
  "10x9",
  "..####....",
  "..####....",
  "..####....",
  "##########",
  "##########",
  "##########",
  "##########",
  "##########",
  "##########",
]
`;
